pablo_lara/session-02/exercise-01/drupal-ingress-admin.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drupal-ingress-rewrite
  namespace: exercise-01
  labels:
    app: wordpress
    type: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - host: drupal.myblog.com
    http:
      paths:
      - path: /drupal
        backend:
          serviceName: drupal-svc
          servicePort: http-sv-dp
